[workspace]
members = [
    "crates/charon",
    "crates/charon-build-proto",
    "crates/charon-cli",
    "crates/charon-cluster",
    "crates/charon-core",
    "crates/charon-crypto",
    "crates/charon-dkg",
    "crates/charon-eth2",
    "crates/charon-k1util",
    "crates/charon-p2p",
    "crates/charon-testutil",
    "crates/tracing",
]
resolver = "3"

[workspace.package]
version = "1.7.1"
edition = "2024"
repository = "https://github.com/NethermindEth/charon-rs"
license = "Apache-2.0"                                    # TODO(template) update license
publish = false

[workspace.dependencies]
alloy = { version = "1.3", features = ["essentials"] }
built = { version = "0.8.0", features = ["git2", "chrono", "cargo-lock"] }
blst = "0.3"
anyhow = "1"
cancellation = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
crossbeam = "0.8.4"
backon = "1.6.0"
hex = { version = "0.4.3" }
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
libp2p = { version = "0.56", features = ["full", "secp256k1"] }
url = "2.5"
uuid = { version = "1.19", features = ["serde", "v4"] }
serde_with = { version = "3.16", features = ["hex", "base64"] }
base64 = "0.22"
sha3 = "0.10"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
criterion = "0.8.0"
regex = "1.12.2"
tempfile = "3.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-loki = "0.2"
vise-exporter = "0.3"
vise = "0.3"

# Crates in the workspace
charon = { path = "crates/charon" }
charon-core = { path = "crates/charon-core" }
charon-build-proto = { path = "crates/charon-build-proto" }
charon-crypto = { path = "crates/charon-crypto" }
charon-eth2 = { path = "crates/charon-eth2" }
charon-k1util = { path = "crates/charon-k1util" }
charon-p2p = { path = "crates/charon-p2p" }
charon-testutil = { path = "crates/charon-testutil" }
charon-tracing = { path = "crates/tracing" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
