[workspace]
members = [
    "crates/app",
    "crates/build-proto",
    "crates/cli",
    "crates/cluster",
    "crates/core",
    "crates/crypto",
    "crates/dkg",
    "crates/eth2api",
    "crates/eth2util",
    "crates/k1util",
    "crates/relay-server",
    "crates/p2p",
    "crates/testutil",
    "crates/tracing",
    "crates/peerinfo",
]
resolver = "3"

[workspace.package]
version = "1.7.1"
edition = "2024"
repository = "https://github.com/NethermindEth/charon-rs"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
alloy = { version = "1.3", features = ["essentials"] }
built = { version = "0.8.0", features = ["git2", "chrono", "cargo-lock"] }
blst = "0.3"
anyhow = "1"
axum = "0.8.6"
cancellation = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env", "cargo"] }
crossbeam = "0.8.4"
either = "1.13"
futures = "0.3"
futures-timer = "3.0"
backon = "1.6.0"
hex = { version = "0.4.3" }
hex-literal = "0.4"
humantime = "2.1"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
libp2p = { version = "0.56", features = ["full", "secp256k1"] }
url = "2.5"
aes = "0.8.4"
ctr = "0.9.2"
cipher = "0.4.4"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
scrypt = "0.11.0"
unicode-normalization = "0.1.25"
zeroize = "1.8.2"
uuid = { version = "1.19", features = ["serde", "v4"] }
unsigned-varint = { version = "0.8", features = ["futures"] }
serde_with = { version = "3.16", features = ["hex", "base64"] }
base64 = "0.22"
sha3 = "0.10"
walkdir = "2"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-loki = "0.2.6"
# todo: remove this once vise is published https://github.com/NethermindEth/charon-rs/issues/126
vise = { git = "https://github.com/matter-labs/vise", rev = "73c654303d8190023cf30034d627b74cf3101b23" }
vise-exporter = { git = "https://github.com/matter-labs/vise", rev = "73c654303d8190023cf30034d627b74cf3101b23" }
criterion = "0.8.0"
reqwest = "0.13"
http = "1.4"
tempfile = "3.24"
assert-json-diff = "2.0"
validator = { version = "0.20", features = ["derive"] }
oas3-gen-support = "0.24"
bon = "3.8"
testcontainers = "0.26"
test-case = "3.3"
tree_hash = "0.12"
tree_hash_derive = "0.12"
wiremock = "0.6"

# Crates in the workspace
pluto-app = { path = "crates/app" }
pluto-build-proto = { path = "crates/build-proto" }
pluto-cli = { path = "crates/cli" }
pluto-cluster = { path = "crates/cluster" }
pluto-core = { path = "crates/core" }
pluto-crypto = { path = "crates/crypto" }
pluto-dkg = { path = "crates/dkg" }
pluto-eth2api = { path = "crates/eth2api" }
pluto-eth2util = { path = "crates/eth2util" }
pluto-k1util = { path = "crates/k1util" }
pluto-relay-server = { path = "crates/relay-server" }
pluto-testutil = { path = "crates/testutil" }
pluto-tracing = { path = "crates/tracing" }
pluto-p2p = { path = "crates/p2p" }
pluto-peerinfo = { path = "crates/peerinfo" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

# Optimize crypto dependencies in test builds for faster tests
[profile.test.package.scrypt]
opt-level = 3

[profile.test.package.pbkdf2]
opt-level = 3

[profile.test.package.sha2]
opt-level = 3

[profile.test.package.aes]
opt-level = 3
