[package]
# TODO(template) rename
name = "template_crate"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# TODO(template) prefer workspace level dependencies
# to keep DRY if you have a binary crate
# Use `default-features = false` 
# and explicitly list features to prevent code bloat and 
# code break after upgrades 
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
proptest = { workspace = true }

# TODO(template)
# don't forget to put this at every crate
# to inherit workspace's lints
[lints]
workspace = true
