[package]
name = "pluto-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backon.workspace = true
chrono.workspace = true
pluto-core.workspace = true
pluto-tracing.workspace = true
pluto-eth2api.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
k256.workspace = true
bon.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
pluto-cluster.workspace = true
pluto-k1util.workspace = true
pluto-crypto.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true

[dev-dependencies]
wiremock.workspace = true
test-case.workspace = true

[lints]
workspace = true
