[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
k256.workspace = true
hex.workspace = true
tokio.workspace = true
charon-p2p.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
