[package]
name = "charon-cluster"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
