[package]
name = "charon-dkg"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[lints]
workspace = true
