[package]
name = "charon-p2p"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
libp2p.workspace = true
thiserror.workspace = true
k256.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true
vise.workspace = true
tokio.workspace = true
rand.workspace = true
tempfile.workspace = true

[dev-dependencies]
charon-testutil.workspace = true
vise-exporter.workspace = true
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true

[features]
mdns = ["libp2p/mdns"]

[[example]]
name = "p2p"
required-features = ["mdns"]