[package]
name = "charon"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
url.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[dev-dependencies]

[lints]
workspace = true
