[package]
name = "charon"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backon.workspace = true
chrono.workspace = true
charon-core.workspace = true
charon-tracing.workspace = true
eth2api.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
alloy.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
k256.workspace = true
bon.workspace = true
charon-cluster = { workspace = true }
charon-k1util = { workspace = true }
charon-crypto = { workspace = true }

[build-dependencies]
charon-build-proto.workspace = true

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true
