[package]
name = "pluto-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
k256.workspace = true
hex.workspace = true
humantime.workspace = true
tokio.workspace = true
pluto-app.workspace = true
pluto-cluster.workspace = true
pluto-relay-server.workspace = true
pluto-tracing.workspace = true
pluto-core.workspace = true
pluto-p2p.workspace = true
pluto-eth2util.workspace = true
pluto-k1util.workspace = true
libp2p.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
rand.workspace = true
tempfile.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-case.workspace = true
backon.workspace = true

[lints]
workspace = true
