[package]
name = "pluto-cluster"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
serde_with.workspace = true
pluto-core.workspace = true
pluto-crypto.workspace = true
pluto-eth2api.workspace = true
thiserror.workspace = true
rand_core.workspace = true
libp2p.workspace = true
pluto-p2p.workspace = true
pluto-eth2util.workspace = true
pluto-eth1wrap.workspace = true
pluto-k1util.workspace = true
k256.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
test-case.workspace = true
pluto-testutil.workspace = true
rand.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[lints]
workspace = true
