[package]
name = "pluto-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cancellation.workspace = true
chrono.workspace = true
crossbeam.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
libp2p.workspace = true
regex.workspace = true
prost.workspace = true
prost-types.workspace = true

[dev-dependencies]
rand.workspace = true
libp2p.workspace = true
prost.workspace = true
prost-types.workspace = true
hex.workspace = true
chrono.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true
built.workspace = true

[lints]
workspace = true
