[package]
name = "pluto-crypto"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blst.workspace = true
hex.workspace = true
pluto-eth2api.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints.rust]
# Allow unsafe code for blst C bindings (overrides workspace forbid)
unsafe_code = "allow"
missing_docs = "deny"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[dev-dependencies]
test-case.workspace = true
