[package]
name = "pluto-dkg"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true

[lints]
workspace = true
