[package]
name = "eth2api"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
http.workspace = true
oas3-gen-support.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
validator.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio.workspace = true

[lints]
workspace = true

[features]
default = []
integration = []
