[package]
name = "pluto-eth2util"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
k256.workspace = true
thiserror.workspace = true
base64.workspace = true
sha3.workspace = true
hex.workspace = true
sha2.workspace = true
cipher.workspace = true
aes.workspace = true
ctr.workspace = true
pbkdf2.workspace = true
scrypt.workspace = true
unicode-normalization.workspace = true
zeroize.workspace = true
pluto-testutil.workspace = true
pluto-k1util.workspace = true
chrono.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
pluto-crypto.workspace = true
tokio.workspace = true
pluto-eth2api.workspace = true
walkdir.workspace = true
uuid.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert-json-diff.workspace = true
test-case.workspace = true

[lints]
workspace = true
