[package]
name = "pluto-p2p"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
either.workspace = true
futures.workspace = true
libp2p.workspace = true
thiserror.workspace = true
k256.workspace = true
pluto-eth2util.workspace = true
pluto-k1util.workspace = true
vise.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rand.workspace = true
tempfile.workspace = true
pluto-tracing.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
pluto-core.workspace = true
backon.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
pluto-testutil.workspace = true
vise-exporter.workspace = true
anyhow.workspace = true
clap.workspace = true
pluto-cluster.workspace = true
hex.workspace = true

[lints]
workspace = true