[package]
name = "pluto-relay-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
bon.workspace = true
futures.workspace = true
libp2p.workspace = true
thiserror.workspace = true
k256.workspace = true
pluto-eth2util.workspace = true
vise.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rand.workspace = true
pluto-tracing.workspace = true
tracing.workspace = true
pluto-p2p.workspace = true
pluto-core.workspace = true
vise-exporter.workspace = true

[dev-dependencies]

[lints]
workspace = true
